--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                 <ul class="cards-product-list list">
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/banking-app-interface-concept.jpg" alt="banking-app" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -71,7 +71,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/cashless-payment.jpg" alt="cashless-payment" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -83,7 +83,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/meditation-app.jpg" alt="meditation-app" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/taxi-service.jpg" alt="taxi-service" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -107,7 +107,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/screen-illustrations.jpg" alt="screen-illustrations" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -119,7 +119,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/online-courses.jpg" alt="online-courses" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -131,7 +131,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/instagram-stories-concept.jpg" alt="instagram-stories-concept" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -143,7 +143,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/organic-food.jpg" alt="organic-food" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
@@ -155,7 +155,7 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <div class="cards-product-img-block">
+                            <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/fresh-coffee.jpg" alt="fresh-coffee" width="360" >
                                 <p class="overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
