--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     rel="noopener noreferrer"
                     >
                       <svg class="card-socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </Li>
