--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     rel="noopener noreferrer"
                     >
                       <svg class="card-socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </Li>
@@ -378,7 +378,7 @@
               rel="noopener noreferrer"
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-client-1"></use>
+                  <use href="./images/icons.svg#icon-ya-co"></use>
                 </svg>
               </a>
             </li>
@@ -391,7 +391,7 @@
               rel="noopener noreferrer"
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-union"></use>
+                  <use href="./images/icons.svg#icon-tagline-here"></use>
                 </svg>
               </a>
             </li>
@@ -404,7 +404,7 @@
               rel="noopener noreferrer"
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-object"></use>
+                  <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
@@ -417,7 +417,7 @@
               rel="noopener noreferrer"
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-1"></use>
+                  <use href="./images/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
@@ -430,7 +430,7 @@
               rel="noopener noreferrer"
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-2"></use>
+                  <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
@@ -443,7 +443,7 @@
               rel="noopener noreferrer"
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-3"></use>
+                  <use href="./images/icons.svg#icon-tag-line-company"></use>
                 </svg>
               </a>
             </li>
