--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
                 <ul class="menu-filter-list list">
-                    <li class="menu-filter-item"><button class="menu-filter-btn menu-filter-btn-1" type="button">All</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">All</button></li>
                     <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Web Site</button></li>
                     <li class="menu-filter-item"><button class="menu-filter-btn" type="button">App</button></li>
                     <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Design</button></li>
