--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,13 @@
         <section class="menu-filter">
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
-                <div class="menu-filter-list list">
-                    <button class="menu-filter-btn" type="button">All</button>
-                    <button class="menu-filter-btn" type="button">Web Site</button>
-                    <button class="menu-filter-btn" type="button">App</button>
-                    <button class="menu-filter-btn" type="button">Design</button>
-                    <button class="menu-filter-btn" type="button">Marketing</button>
-                </div>
+                <ul class="menu-filter-list list">
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">All</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Web Site</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">App</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Design</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Marketing</button></li>
+                </ul>
                 <!-- SECTION-2 -->
                 <ul class="cards-product-list list">
                     <li class="cards-product-item">
