--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text">Strategy</h3>
-              <p class="suboptions-descriptions-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+              <h3 class="subtitel-options-text ubtitel-benefits">Strategy</h3>
+              <p class="suboptions-descriptions-text description-benefits">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="benefits-item">
               <div class="advantages-block">
@@ -71,8 +71,8 @@
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text">Punctuality</h3>
-              <p class="suboptions-descriptions-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+              <h3 class="subtitel-options-text ubtitel-benefits">Punctuality</h3>
+              <p class="suboptions-descriptions-text description-benefits">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="benefits-item">
               <div class="advantages-block">
@@ -80,8 +80,8 @@
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text">Diligence</h3>
-              <p class="suboptions-descriptions-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+              <h3 class="subtitel-options-text ubtitel-benefits">Diligence</h3>
+              <p class="suboptions-descriptions-text description-benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="benefits-item">
               <div class="advantages-block">
@@ -89,8 +89,8 @@
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text">Technologies</h3>
-              <p class="suboptions-descriptions-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+              <h3 class="subtitel-options-text ubtitel-benefits">Technologies</h3>
+              <p class="suboptions-descriptions-text description-benefits">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
           </ul>
         </div>
@@ -98,7 +98,7 @@
       <!-- SECTION-3 -->
       <section class="category-product">
         <div class="container">
-          <h2 class="sub-title-text">What are we doing</h2>
+          <h2 class="sub-title-text product-text">What are we doing</h2>
           <ul class="category-product-list list">
             <li class="category-product-item">
               <img src="./images/mac.jpg" alt="mac" width="360" height="300">
@@ -113,9 +113,9 @@
         </div>
       </section>
       <!-- SECTION-4 -->
-      <section class="card-employee section">
+      <section class="card-employee">
         <div class="container">
-          <h2 class="sub-title-text">Our Team</h2>
+          <h2 class="sub-title-text card-text">Our Team</h2>
           <ul class="card-employee-list list">
             <li class="card-employee-item">
               <img class="card-employee-img" src="./images/mark-guerrero.jpg" alt="product designer" width="264" height="260">
@@ -232,7 +232,7 @@
                     rel="noopener noreferrer"
                     >
                       <svg class="card-socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </Li>
@@ -293,7 +293,7 @@
                     rel="noopener noreferrer"
                     >
                       <svg class="card-socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </Li>
@@ -354,7 +354,7 @@
                     rel="noopener noreferrer"
                     >
                       <svg class="card-socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </Li>
@@ -444,19 +444,6 @@
               >
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-tag-line-company"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="customers-list-item cut">
-              <a
-              class="customers-link"
-              href=""
-              aria-label="tag-line"
-              target="_blank"
-              rel="noopener noreferrer"
-              >
-                <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
