--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text ubtitel-benefits">Strategy</h3>
+              <h3 class="subtitel-options-text subtitel-benefits">Strategy</h3>
               <p class="suboptions-descriptions-text description-benefits">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="benefits-item">
@@ -71,7 +71,7 @@
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text ubtitel-benefits">Punctuality</h3>
+              <h3 class="subtitel-options-text subtitel-benefits">Punctuality</h3>
               <p class="suboptions-descriptions-text description-benefits">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="benefits-item">
@@ -80,7 +80,7 @@
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text ubtitel-benefits">Diligence</h3>
+              <h3 class="subtitel-options-text subtitel-benefits">Diligence</h3>
               <p class="suboptions-descriptions-text description-benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="benefits-item">
@@ -89,7 +89,7 @@
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
-              <h3 class="subtitel-options-text ubtitel-benefits">Technologies</h3>
+              <h3 class="subtitel-options-text subtitel-benefits">Technologies</h3>
               <p class="suboptions-descriptions-text description-benefits">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
           </ul>
