--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,8 @@
                                 <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                              <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Banking App Interface Concept</h2>
-                                <p class="suboptions-descriptions-text">App</p>
+                                <h2 class="sub-title-text cards-product-text">Banking App Interface Concept</h2>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">App</p>
                             </div>
                         </a>
                     </li>
@@ -76,8 +76,8 @@
                                 <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Cashless Payment</h2>
-                                <p class="suboptions-descriptions-text">Marketing</p>
+                                <h2 class="sub-title-text cards-product-text">Cashless Payment</h2>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -88,8 +88,8 @@
                                 <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Meditation App</h2>
-                                <p class="suboptions-descriptions-text">App</p>
+                                <h2 class="sub-title-text cards-product-text">Meditation App</h2>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">App</p>
                             </div>
                         </a>
                     </li>
@@ -100,8 +100,8 @@
                                 <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Taxi Service</h2>
-                                <p class="suboptions-descriptions-text">Marketing</p>
+                                <h2 class="sub-title-text cards-product-text">Taxi Service</h2>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -113,7 +113,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Screen Illustrations</h2>
-                                <p class="suboptions-descriptions-text">Design</p>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Design</p>
                             </div>
                         </a>
                     </li>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Online Courses</h2>
-                                <p class="suboptions-descriptions-text">Marketing</p>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Instagram Stories Concept</h2>
-                                <p class="suboptions-descriptions-text">Design</p>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Design</p>
                             </div>
                         </a>
                     </li>
@@ -149,7 +149,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Organic Food</h2>
-                                <p class="suboptions-descriptions-text">Web Site</p>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Web Site</p>
                             </div>
                         </a>
                     </li>
@@ -161,7 +161,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Fresh Coffee</h2>
-                                <p class="suboptions-descriptions-text">Web Site</p>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Web Site</p>
                             </div>
                         </a>
                     </li>
