--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/banking-app-interface-concept.jpg" alt="banking-app" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                              <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Banking App Interface Concept</h2>
@@ -73,7 +73,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/cashless-payment.jpg" alt="cashless-payment" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Cashless Payment</h2>
@@ -85,7 +85,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/meditation-app.jpg" alt="meditation-app" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Meditation App</h2>
@@ -97,7 +97,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/taxi-service.jpg" alt="taxi-service" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Taxi Service</h2>
@@ -109,7 +109,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/screen-illustrations.jpg" alt="screen-illustrations" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Screen Illustrations</h2>
@@ -121,7 +121,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/online-courses.jpg" alt="online-courses" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Online Courses</h2>
@@ -133,7 +133,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/instagram-stories-concept.jpg" alt="instagram-stories-concept" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Instagram Stories Concept</h2>
@@ -145,7 +145,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/organic-food.jpg" alt="organic-food" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Organic Food</h2>
@@ -157,7 +157,7 @@
                         <a class="cards-product-link link" href="">
                             <div class="cards-product-img-wrapper">
                                 <img class="cards-product-img" src="./images/portfolio/fresh-coffee.jpg" alt="fresh-coffee" width="360" >
-                                <p class="suboptions-descriptions-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text">Fresh Coffee</h2>
