--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Taxi Service</h2>
-                                <p class="suboptions-descriptions-text">Marketing</p>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -112,8 +112,8 @@
                                 <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Screen Illustrations</h2>
-                                <p class="suboptions-descriptions-text">Design</p>
+                                <h2 class="sub-title-text cards-product-text">Screen Illustrations</h2>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Design</p>
                             </div>
                         </a>
                     </li>
@@ -124,8 +124,8 @@
                                 <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Online Courses</h2>
-                                <p class="suboptions-descriptions-text">Marketing</p>
+                                <h2 class="sub-title-text cards-product-text">Online Courses</h2>
+                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -136,7 +136,7 @@
                                 <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Instagram Stories Concept</h2>
+                                <h2 class="sub-title-text cards-product-text">Instagram Stories Concept</h2>
                                 <p class="suboptions-descriptions-text">Design</p>
                             </div>
                         </a>
@@ -148,7 +148,7 @@
                                 <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Organic Food</h2>
+                                <h2 class="sub-title-text cards-product-text">Organic Food</h2>
                                 <p class="suboptions-descriptions-text">Web Site</p>
                             </div>
                         </a>
@@ -160,7 +160,7 @@
                                 <p class="suboptions-descriptions-text overlay-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="cards-product-desc">
-                                <h2 class="sub-title-text">Fresh Coffee</h2>
+                                <h2 class="sub-title-text cards-product-text">Fresh Coffee</h2>
                                 <p class="suboptions-descriptions-text">Web Site</p>
                             </div>
                         </a>
